feat(admin): implement lot details refreshing (#214)
* feat(admin): implement lot details refreshing

* fix tests

* chore(admin): add refresh metrics to RefreshLot method
