# api/api.go
@@ -138,6 +138,7 @@ func (h Handler) setupHandlers(api *operations.BirzzhaAPI) {
 	api.AdminAdminDeclineLotHandler = adminops.AdminDeclineLotHandlerFunc(h.adminDeclineLot)
 	api.AdminAdminGetLotHandler = adminops.AdminGetLotHandlerFunc(h.adminGetLot)
 	api.AdminAdminCancelLotHandler = adminops.AdminCancelLotHandlerFunc(h.adminCancelLot)
+	api.AdminAdminRefreshLotHandler = adminops.AdminRefreshLotHandlerFunc(h.adminRefreshLot)
 
 	api.AdminAdminGetSettingsHandler = adminops.AdminGetSettingsHandlerFunc(h.adminGetSettings)
 	api.AdminAdminUpdateSettingsLandingHandler = adminops.AdminUpdateSettingsLandingHandlerFunc(h.adminUpdateSettingsLanding)
